turtleart.triangle.Triangle.scala.error
Erreur de compilation :
Triangle:1: error: Missing closing brace `}' assumed here
override def run() {
^Triangle:1: error: expected start of definition
override def run() {
         ^